# capoomobi

./: .editorconfig  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
docs/: cli.md  compose.md  design.md
example/: confiture.json  docker-compose-missing-field.yaml  docker-compose.yaml  docker-unformatted.yaml
example_failure/: confiture.json  docker-compose.yaml
src/: bootstrap.rs  main.rs
src/assets/: loader.rs
src/cli/: entry.rs  mod.rs
src/cli/components/: welcome.rs
src/cli/config/: mod.rs
src/cli/configurator/: builder.rs  config.rs  configure.rs  json.rs  mod.rs
src/cli/core/: mod.rs
src/cli/parser/: mod.rs  options.rs
src/cli/scenarios/: mod.rs  parser.rs  scenes.rs  welcome.rs
src/confiture/: config.rs
src/core/: mod.rs
src/core/configurator/: builder.rs  config.rs  configure.rs
src/core/errors/: message.rs  mod.rs
src/core/fs/: config.rs  mod.rs  toolbox.rs
src/core/logger/: mod.rs
src/core/serde_utils/: mod.rs
src/docker/: lexer.rs  loader.rs  mod.rs  parser.rs
src/docker/lexer/: compose.rs  mod.rs
src/docker/yaml/: compose.rs  mod.rs
src/errors/: mod.rs
src/kubernetes/: builder.rs  mod.rs  tree.rs
src/kubernetes/compiler/: mod.rs  writer.rs
src/kubernetes/controllers/: container.rs  controller.rs  helper.rs  ingress.rs  mod.rs  service.rs
src/kubernetes/generator/: mod.rs
src/tests/: conf.rs  confiture.rs  docker.rs  fs.rs  generator.rs  kube.rs  kube_io.rs  mod.rs  scenarios.rs  templating.rs
static/k8s/: controller_tmpl.yaml  ingress_tmpl.yaml  service_tmpl.yaml
(+36 files in other folders)
