[package]
name = "capoomobi"
version = "0.1.0"
authors = ["Yellowman <marc.inthaamnouay@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "1.8"
yaml-rust = "0.4.3"
handlebars = "3.0"
rust-embed="5.1.0"
futures = "0.3"
async-std = "1.2.0"